Added Accessories mod support.
Fixed a crash when installed on dedicated servers.

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ subprojects {
 			name = "CurseMaven"
 			url = "https://www.cursemaven.com"
 		}
+		maven {
+			name = "LadySnake"
+			url = 'https://maven.ladysnake.org/releases'
+		}
 	}
 
 	dependencies {
@@ -76,6 +80,10 @@ subprojects {
 		modImplementation files("../libs/Iceberg-1.21-common-1.2.3.jar")
 		modImplementation files("../libs/LegendaryTooltips-1.21-common-1.4.7.jar")
 		modImplementation "curse.maven:adorned-1036809:5515068"
+		modImplementation "curse.maven:accessories-938917:5576244"
+		modImplementation "curse.maven:accessoriestrinkets-1005680:5575593"
+		modImplementation("org.ladysnake.cardinal-components-api:cardinal-components-base:6.1.0")
+		modImplementation("org.ladysnake.cardinal-components-api:cardinal-components-entity:6.1.0")
 	}
 
 	java {
